# hamster_gazebo

./: .gitignore  README.md  README.md~
ackermann_vehicle/ackermann_vehicle_description/launch/: ackermann_vehicle.launch
ackermann_vehicle/ackermann_vehicle_description/meshes/: body.dae
ackermann_vehicle/ackermann_vehicle_description/urdf/: em_3905.urdf.xacro~  himoto_mastadon.urdf.xacro  himoto_mastadon.urdf.xacro~  test.sdf
ackermann_vehicle/ackermann_vehicle_gazebo/config/: em_3905_joint_ctrlr_params.yaml
ackermann_vehicle/ackermann_vehicle_gazebo/launch/: ackermann_vehicle.launch
ackermann_vehicle/ackermann_vehicle_gazebo/nodes/: ackermann_controller.py
decision_making/: CMakeLists.txt~
decision_making/cmake/: decision_making_parsing.cmake
decision_making/include/decision_making/: EventSystem.h  SynchCout.h
decision_making_algorithms/: .gitignore  CMakeLists.txt  package.xml
decision_making_algorithms/include/decision_making_algorithms/: FuzzyLogic.h
decision_making_parser/: CMakeLists.txt
decision_making_parser/cmake/: decision_making_parser-extras.cmake.in
hamster_sim/: .gitignore  CMakeLists.txt  package.xml
hamster_sim/launch/: agent.launch  hamster.launch  hamster.launch~  hamster.sh  hamster.sh~
hamster_sim/maps/: hamster.pgm  hamster.yaml
hamster_sim/models/willow_closed/: model.config  model.sdf
hamster_sim/models/willow_closed/meshes/: willowgarage_collision.dae  willowgarage_visual.dae
hamster_sim/worlds/: .gitignore  hamster.world  mrm.world~
mrm_ackermann_controller/: .gitignore  CMakeLists.txt  package.xml
mrm_ackermann_controller/src/: AckermannController.cpp  AckermannController.h  mrm_ackermann_controller_node.cpp
mrm_control_panel/: .gitignore  CMakeLists.txt  package.xml  plugin.xml  setup.py
mrm_control_panel/include/mrm_control_panel/: ControlPlugin.h  ControlWidget.h  KeyboardTeleop.h  MapGraphicsItem.h  MapGraphicsView.h  MapWidget.h  Parameters.h  RobotGraphicsItem.h  RobotSelectionManager.h  RobotWidget.h  TeleoperatorInstanceWidget.h  TeleoperatorWidget.h  VelocityWidget.h  VideoWidget.h  mrm_adviser_widget.h
mrm_control_panel/include/polygons/: Polygon2d.hpp  UI.hpp  clipper.hpp  cv_extra.hpp  ros_types.hpp  types.hpp
mrm_control_panel/resources/: mrm_adviser_resource.qrc.depends  mrm_event_log_resources.qrc  mrm_map_resources.qrc  mrm_robot_resources.qrc  mrm_teleoperator_resources.qrc  mrm_video_resources.qrc
mrm_control_panel/src/mrm_control_panel/: ControlPlugin.cpp  ControlWidget.cpp  MapGraphicsItem.cpp  MapGraphicsView.cpp  MapWidget.cpp  Parameters.cpp  RobotGraphicsItem.cpp  RobotSelectionManager.cpp  RobotWidget.cpp  TeleoperatorInstanceWidget.cpp  TeleoperatorWidget.cpp  VideoWidget.cpp
mrm_control_panel/src/polygons/: UI.cpp  clipper.cpp
mrm_control_panel/ui/: TeleoperatorInstance.ui  TeleoperatorInstance1.ui  mrm_control_widget.ui  mrm_map_widget.ui  mrm_operator_widget.ui  mrm_robot_widget.ui  mrm_video_widget.ui
mrm_transformer/: CMakeLists.txt  package.xml
mrm_transformer/include/mrm_transformer/: AgentTransformer.h
mrm_transformer/src/: AgentTransformer.cpp  agent_transformer_node.cpp
mrm_wandering/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
mrm_wandering/cmake/: decision_making_parsing.cmake
mrm_wandering/src/: Wandering.cpp  WanderingNode.cpp
robot_task/: CMakeLists.txt
